k8s_manifests/keycloak/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
  name: keycloak
  namespace: keycloak-app
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`auth.fahmed.org`)
      services:
        - name: keycloak-app
          port: 8080
  tls:
    secretName: keycloak-tls
