k8s_manifests/keycloak/keycloak-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare-prod
  name: keycloak
  namespace: keycloak-app
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`auth.fahmed.org`)
      services:
        - name: my-keycloak
          port: 8080
